# simple_3d_py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_JA.md  pyproject.toml
src/simple_3d/: __init__.py  enum_sp3d_draw_mode.py  sp3d_color.py  sp3d_face.py  sp3d_fragment.py  sp3d_material.py  sp3d_obj.py  sp3d_physics.py  sp3d_v3d.py
tests/: test_sp3d_obj.py  test_sp3d_v3d.py
